# lerobot-studio

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.ko.md  README.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
.omx/: metrics.json
.omx/logs/: turns-2026-02-21.jsonl  turns-2026-02-22.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
docs/: competitive-analysis.md  design-phase-0-1.md  design-phase-1.md  developer-manual.md  ecosystem-integration-plan.md  feature-proposals.md  frontend-backend-compatibility-remediation.md  gui-redesign-workbench.md  phase0-1-design.md  phase1-design.md  plan_mobile.md  release-checklist.md  roadmap.md  troubleshooting.md  uiux-audit.md
docs/private/: INDEX.md  README.md  getting-started.md  quality-analysis-2026-03-04.md
docs/proposals/: architecture-hardening-work-items.md
docs/wireframe/: README.md  coverage-cutover.md  runtime-contract.md  spec.md
docs_public/: api-and-streaming.md  architecture.md  contributing.md  current-architecture.md  developer-guide.md  docs-map.md  feature-spec.md  getting-started.md  hardware.md  index.md  installation.md  workflow.md
frontend/: .env.mock  DESIGN_GUIDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/scripts/: check-openapi-contract.mjs
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  theme.ts
frontend/src/app/: App.tsx  hf-auth-context.tsx  routes.ts  theme-context.tsx
frontend/src/app/components/: MotorMappingGate.tsx
frontend/src/app/hooks/: useCameraFeeds.ts  useEvalCheckpoint.ts  useEvalProgress.ts  useMappedCameras.ts
frontend/src/app/pages/: Calibration.tsx  CameraSetup.tsx  DatasetManagement.tsx  Evaluation.tsx  MotorSetup.tsx  Recording.tsx  SystemStatus.tsx  Teleop.tsx  Training.tsx
frontend/src/app/services/: apiClient.ts  bootstrap.ts  calibrationProfiles.ts  contracts.ts  notifications.ts
frontend/src/app/store/: index.ts  types.ts
frontend/src/components/dataset/: DatasetAutoFlagPanel.tsx  DatasetCurationPanel.tsx  HubSearchCard.tsx
frontend/src/components/eval/: EvalConfigPanel.tsx  EvalProgressPanel.tsx  EvalRobotConfig.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx
frontend/src/components/shared/: ConsoleDrawer.tsx  LogConsole.tsx  MappedCameraRows.tsx  ProcessButtons.tsx  ProfileSelector.tsx  RobotCapabilitiesCard.tsx  Toast.tsx
frontend/src/hooks/: useEvalCheckpoint.ts  useEvalProgress.ts  useProcess.ts
frontend/src/lib/: api.ts  errors.ts  format.ts  processConflicts.ts  types.ts
frontend/src/mock-api/: handlers.ts
frontend/src/styles/: base.css  components.css  layout.css  tabs.css  theme.css  variables.css
frontend/src/tabs/: CalibrateTab.tsx  DatasetTab.tsx  DeviceSetupTab.tsx  EvalTab.tsx  MotorSetupTab.tsx  RecordTab.tsx  StatusTab.tsx  TeleopTab.tsx  TrainTab.tsx
frontend/src/tabs/__tests__/: DatasetTab.test.tsx
frontend/src/test/: setup.ts
frontend_legacy/: DESIGN_GUIDE.md  README.md  index.html  package-lock.json  package.json
frontend_legacy/src/: App.css  setupTests.ts
frontend_legacy/src/components/dataset/: DatasetAutoFlagPanel.tsx  DatasetCurationPanel.tsx  DatasetQualityPanel.tsx  HubSearchCard.tsx
frontend_legacy/src/components/eval/: EvalConfigPanel.tsx
frontend_legacy/src/components/layout/: AppShell.tsx  Sidebar.tsx
frontend_legacy/src/components/shared/: LogConsole.tsx  MappedCameraRows.tsx  ProcessButtons.tsx  ProfileSelector.tsx  RobotCapabilitiesCard.tsx  Toast.tsx
frontend_legacy/src/hooks/: useCameraFeeds.ts  useConfig.ts  useMappedCameras.ts  useWebSocket.ts
frontend_legacy/src/hooks/__tests__/: useConfig.test.ts  useProcess.test.ts  useWebSocket.test.ts
frontend_legacy/src/store/: index.ts
frontend_legacy/src/styles/: components.css  tabs.css  variables.css
frontend_legacy/src/tabs/: DatasetTab.tsx  MotorSetupTab.tsx  StatusTab.tsx  TrainTab.tsx
frontend_legacy/src/tabs/__tests__/: DatasetTab.test.tsx
notebooks/: lerobot_train.ipynb
src/lerobot_studio/: cli.py  command_builders.py  server.py
src/lerobot_studio/static/: index.html  main.js  style.css  workbench_calibrate.js  workbench_device_setup.js  workbench_eval.js  workbench_helpers.js  workbench_mode_signals.js  workbench_motor_setup.js  workbench_navigation.js  workbench_profile.js  workbench_record.js  workbench_streams.js  workbench_teleop.js
src/lestudio/: __main__.py  _auth.py  _config_helpers.py  _cors.py  _device_helpers.py  _logging.py  _streaming.py  _train_helpers.py  _udev_helpers.py  calibrate_bridge.py  calibration_validator.py  camera_patch.py  capabilities.py  cli.py  command_builders.py  device_registry.py  motor_monitor_bridge.py  process_manager.py  record_bridge.py  server.py  teleop_bridge.py
src/lestudio/lib/: __init__.py  async_job_manager.py
src/lestudio/routes/: _state.py  config.py  dataset.py  devices.py  eval.py  models.py  motor.py  process.py  streaming.py  training.py  udev.py
src/lestudio/services/: dataset_service.py  process_service.py  training_service.py
src/lestudio/static/: index.html  main.js  workbench_api.js  workbench_calibrate.js  workbench_core.js  workbench_dataset.js  workbench_device_setup.js  workbench_feeds.js  workbench_mode_signals.js  workbench_motor_setup.js  workbench_navigation.js  workbench_record.js  workbench_status.js  workbench_streams.js  workbench_teleop.js  workbench_train.js
tests/: test_cli.py  test_command_builders.py  test_dataset_config_routes.py  test_device_registry.py  test_process_manager.py  test_server_cors.py  test_server_helpers.py  test_server_process_command.py  test_server_routes.py  test_server_runtime_regressions.py
wireframe_test/: index.html  interactive_audit.mjs  interactive_test.mjs  package-lock.json  package.json  screenshot_tabs.mjs  verify_fixes.mjs  workflow_audit.mjs
wireframe_test/src/app/: App.tsx  hf-auth-context.tsx  routes.ts
wireframe_test/src/imports/: wireframe-brief.md
wireframe_test/src/mock-api/: handlers.ts
(+228 files in other folders)
