[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lestudio"
version = "0.1.0"
description = "LeStudio: Web-based GUI for LeRobot robot arm operations"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "TheMomentLab"},
]
keywords = ["lerobot", "lestudio", "robotics", "gui", "calibration", "teleop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "opencv-python-headless>=4.8.0",
]

[project.scripts]
lestudio = "lestudio.cli:main"

[project.urls]
Homepage = "https://github.com/TheMomentLab/lestudio"
Repository = "https://github.com/TheMomentLab/lestudio"
Issues = "https://github.com/TheMomentLab/lestudio/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lestudio = ["static/**"]

[tool.pytest.ini_options]
addopts = "--ignore=src/lerobot"
