[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lestudio"
version = "0.1.0"
description = "LeStudio: Web-based GUI workbench for Hugging Face LeRobot — device setup, teleop, record, train, and eval in one dashboard"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "TheMomentLab"},
]
keywords = ["lerobot", "lestudio", "robotics", "gui", "calibration", "teleop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastapi>=0.100.0,<1.0.0",
    "fsspec>=2023.1.0,<=2025.9.0",
    "uvicorn[standard]>=0.20.0,<1.0.0",
    "opencv-python-headless>=4.8.0,<5.0.0",
    "psutil>=5.9.0,<7.0.0",
    "pandas>=2.0.0,<3.0.0",
    "pyarrow>=21.0.0,<22.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0,<1.0.0",
    "mypy>=1.10.0,<2.0.0",
    "pytest>=7.0.0,<9.0.0",
    "anyio[trio]>=4.0.0,<5.0.0",
    "httpx>=0.24.0,<1.0.0",
    "pytest-cov>=5.0.0,<7.0.0",
    "pre-commit>=3.5.0,<5.0.0",
]

[project.scripts]
lestudio = "lestudio.cli:main"

[project.urls]
Homepage = "https://github.com/TheMomentLab/lestudio"
Repository = "https://github.com/TheMomentLab/lestudio"
Issues = "https://github.com/TheMomentLab/lestudio/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lestudio = ["static/**"]

[tool.pytest.ini_options]
addopts = "--ignore=src/lerobot -p no:launch_testing -p no:launch_ros"
testpaths = ["tests"]
markers = [
    "smoke_hw: hardware smoke tests that require physical devices (/dev/video*, /dev/tty*)",
]


[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "Linux"
venvPath = "/home/jinhyuk2me/miniforge3/envs"
venv = "lerobot"
typeCheckingMode = "off"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
